# commando

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  REQUIREMENTS.md  TEST_RESULTS.md  pyproject.toml  pytest.ini
commando/: __init__.py  application.py  config.py  executor.py  logger.py  main.py  platform.py  window.py
commando/dialogs/: __init__.py  about.py  card_editor.py  settings.py
commando/models/: __init__.py  command.py
commando/storage/: __init__.py  command_storage.py  default_commands.py
commando/views/: __init__.py  main_view.py  terminal_view.py  web_view.py
commando/widgets/: __init__.py  command_card.py  speed_dial.py
data/: com.github.commando.desktop  com.github.commando.metainfo.xml
docs/: API.md  DEVELOPMENT.md  README.md
flatpak/: com.github.commando.yml
packaging/arch/: PKGBUILD
packaging/debian/: control
packaging/homebrew/: commando.rb
packaging/rpm/: commando.spec
tests/: README.md  __init__.py  conftest.py  test_config.py  test_executor.py  test_logger.py  test_models.py  test_storage.py
